Fix dark mode styles

--- a/src/components/shared/multisignatureMembers/styles.css
+++ b/src/components/shared/multisignatureMembers/styles.css
@@ -7,9 +7,10 @@
   flex-direction: row;
   flex-wrap: wrap;
 
-  & > p {
+  & p {
     width: 100%;
     text-align: left;
+    color: var(--color-maastricht-blue);
   }
 
   & > div {
@@ -48,6 +49,7 @@
 
         margin-left: 10px;
         color: black;
+        color: var(--color-maastricht-blue);
       }
     }
 
